Day 2 add animations

--- a/2/index.html
+++ b/2/index.html
@@ -8,12 +8,13 @@
   <body>
     <div class="frame">
       <div class="center">
-        <div class="burger">
-          <div class="line"></div>
-          <div class="line"></div>
-          <div class="line"></div>
+        <div class="hamburger inactive">
+          <div class="bar no-animation" id="top"></div>
+          <div class="bar no-animation" id="middle"></div>
+          <div class="bar no-animation" id="bottom"></div>
         </div>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
