--- a/3/index.html
+++ b/3/index.html
@@ -12,7 +12,7 @@
         <span class="right-face"></span>
         <div class="sand"></div>
         <div class="sun"></div>
-        <span class="shadow"></span>
+        <div class="shadow"></div>
       </div>
     </div>
   </body>
