Day 5 add animations

--- a/5/index.html
+++ b/5/index.html
@@ -26,20 +26,48 @@
             <span>Purchases</span>
           </div>
           <div class="grey-line"></div>
-          <div class="red-dot rd-1"></div>
-          <div class="red-dot rd-2"></div>
-          <div class="red-dot rd-3"></div>
-          <div class="red-dot rd-4"></div>
-          <div class="red-dot rd-5"></div>
-          <div class="red-dot rd-6"></div>
-          <div class="red-dot rd-7"></div>
-          <div class="blue-dot bd-1"></div>
-          <div class="blue-dot bd-2"></div>
-          <div class="blue-dot bd-3"></div>
-          <div class="blue-dot bd-4"></div>
-          <div class="blue-dot bd-5"></div>
-          <div class="blue-dot bd-6"></div>
-          <div class="blue-dot bd-7"></div>
+          <div class="red-dot rd-1">
+            <div class="tooltip">458</div>
+          </div>
+          <div class="red-dot rd-2">
+            <div class="tooltip">812</div>
+          </div>
+          <div class="red-dot rd-3">
+            <div class="tooltip">746</div>
+          </div>
+          <div class="red-dot rd-4">
+            <div class="tooltip">877</div>
+          </div>
+          <div class="red-dot rd-5">
+            <div class="tooltip">517</div>
+          </div>
+          <div class="red-dot rd-6">
+            <div class="tooltip">464</div>
+          </div>
+          <div class="red-dot rd-7">
+            <div class="tooltip">850</div>
+          </div>
+          <div class="blue-dot bd-1">
+            <div class="tooltip">26</div>
+          </div>
+          <div class="blue-dot bd-2">
+            <div class="tooltip">41</div>
+          </div>
+          <div class="blue-dot bd-3">
+            <div class="tooltip">22</div>
+          </div>
+          <div class="blue-dot bd-4">
+            <div class="tooltip">36</div>
+          </div>
+          <div class="blue-dot bd-5">
+            <div class="tooltip">25</div>
+          </div>
+          <div class="blue-dot bd-6">
+            <div class="tooltip">13</div>
+          </div>
+          <div class="blue-dot bd-7">
+            <div class="tooltip">20</div>
+          </div>
           <div class="middle-grey-line"></div>
           <svg class="statistics">
             <polyline
